added classification code

--- a/predictUnet.ipynb
+++ b/predictUnet.ipynb
@@ -105,8 +105,8 @@
    "outputs": [],
    "source": [
     "# Validation set\n",
-    "path_to_val_images = 'data/seg_dir_unet/val_images'\n",
-    "path_to_val_masks = 'data/seg_dir_unet/val_masks'\n",
+    "path_to_val_images = 'data/seg_dir/val_images'\n",
+    "path_to_val_masks = 'data/seg_dir/val_masks'\n",
     "\n",
     "# # Test set\n",
     "# path_to_val_images = 'data/seg_dir_test_images'\n",
