--- a/trainUnet.ipynb
+++ b/trainUnet.ipynb
@@ -60,14 +60,14 @@
    "outputs": [],
    "source": [
     "#Training Data\n",
-    "train_image_path = '/external_drive/BUS_Deep_Learning/data/seg_dir_unet/train_images'\n",
-    "train_mask_path = '/external_drive/BUS_Deep_Learning/data/seg_dir_unet/train_masks'\n",
+    "train_image_path = 'data/seg_dir/train_images'\n",
+    "train_mask_path = 'data/seg_dir/train_masks'\n",
     "len_training_set = len(os.listdir(train_image_path))\n",
     "print('len training set -->', len_training_set)\n",
     "\n",
     "#Validation Data\n",
-    "val_image_path = '/external_drive/BUS_Deep_Learning/data/seg_dir_unet/val_images'\n",
-    "val_mask_path = '/external_drive/BUS_Deep_Learning/data/seg_dir_unet/val_masks'\n",
+    "val_image_path = 'data/seg_dir/val_images'\n",
+    "val_mask_path = 'data/seg_dir/val_masks'\n",
     "len_val_set = len(os.listdir(val_image_path))\n",
     "print('len validation set -->', len_val_set)"
    ]
