--- a/lesion_type_inference.ipynb
+++ b/lesion_type_inference.ipynb
@@ -18,22 +18,79 @@
     "import cv2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from keras.models import load_model"
+    "from keras.models import load_model\n",
+    "\n",
+    "from keras.backend.tensorflow_backend import set_session\n",
+    "import tensorflow as tf\n",
+    "config = tf.ConfigProto()\n",
+    "config.gpu_options.allow_growth = True  # dynamically grow the memory used on the GPU\n",
+    "config.log_device_placement = True  # to log device placement (on which device the operation ran)\n",
+    "sess = tf.Session(config=config)\n",
+    "set_session(sess)  # set this TensorFlow session as the default session for Keras"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading resnet50-noaug_no-normals\n",
+      "loading resnet50-aug_no-normals\n",
+      "loading inception_resnet_v2-noaug_no-normals\n",
+      "loading inception_resnet_v2-aug_no-normals\n",
+      "loading inception_resnet_v2-noaug_no-normals_clahe_eq\n",
+      "loading inception_resnet_v2-noaug_no-normals_clahe_eq\n"
+     ]
+    }
+   ],
    "source": [
     "#Load Model\n",
-    "model = 'models/classification_models/inception_resnet_v2-aug_no-normals'\n",
-    "model_name = 'weights-improvement-32-0.89.hdf5'\n",
-    "             \n",
-    "model_dir = os.path.join(model,model_name)\n",
     "\n",
-    "trained_lesion_class_model = load_model(model_dir)"
+    "#resnet50-noaug_no-normals\n",
+    "print('loading resnet50-noaug_no-normals')\n",
+    "model = 'models/classification_models/resnet_50-noaug_no-normals'\n",
+    "model_name = 'weights-improvement-19-0.78.hdf5'          \n",
+    "model_dir = os.path.join(model,model_name)\n",
+    "resnet50_noaug_no_normals = load_model(model_dir)\n",
+    "\n",
+    "#resnet50-aug_no-normals\n",
+    "print('loading resnet50-aug_no-normals')\n",
+    "model = 'models/classification_models/resnet_50-aug_no-normals'\n",
+    "model_name = 'weights-improvement-18-0.78.hdf5'          \n",
+    "model_dir = os.path.join(model,model_name)\n",
+    "resnet50_aug_no_normals = load_model(model_dir)\n",
+    "\n",
+    "#inception_resnet_v2-noaug_no-normals\n",
+    "print('loading inception_resnet_v2-noaug_no-normals')\n",
+    "model = 'models/classification_models/inception_resnet_v2-noaug_no-normals'\n",
+    "model_name = 'weights-improvement-27-0.89.hdf5'          \n",
+    "model_dir = os.path.join(model,model_name)\n",
+    "inception_resnet_v2_noaug_no_normals = load_model(model_dir)\n",
+    "\n",
+    "#inception_resnet_v2-aug_no-normals\n",
+    "print('loading inception_resnet_v2-aug_no-normals')\n",
+    "model = 'models/classification_models/inception_resnet_v2-aug_no-normals'\n",
+    "model_name = 'weights-improvement-32-0.89.hdf5'          \n",
+    "model_dir = os.path.join(model,model_name)\n",
+    "inception_resnet_v2_aug_no_normals = load_model(model_dir)\n",
+    "\n",
+    "#inception_resnet_v2-noaug_no-normals_clahe_eq\n",
+    "print('loading inception_resnet_v2-noaug_no-normals_clahe_eq')\n",
+    "model = 'models/classification_models/inception_resnet_v2-noaug_no-normals_clahe_eq'\n",
+    "model_name = 'weights-improvement-28-0.81.hdf5'          \n",
+    "model_dir = os.path.join(model,model_name)\n",
+    "inception_resnet_v2_noaug_no_normals_clahe_eq = load_model(model_dir)\n",
+    "\n",
+    "#inception_resnet_v2-aug_no-normals_clahe_eq\n",
+    "print('loading inception_resnet_v2-aug_no-normals_clahe_eq')\n",
+    "model = 'models/classification_models/inception_resnet_v2-aug_no-normals_clahe_eq'\n",
+    "model_name = 'weights-improvement-41-0.73.hdf5'          \n",
+    "model_dir = os.path.join(model,model_name)\n",
+    "inception_resnet_v2_aug_no_normals_clahe_eq = load_model(model_dir)"
    ]
   },
   {
@@ -42,8 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = pd.read_pickle('/external_drive/BUS_Deep_Learning/train_set_class_nn.pickle')\n",
-    "val_set = pd.read_pickle('/external_drive/BUS_Deep_Learning/val_set_class_nn.pickle')"
+    "train_set = pd.read_pickle('train_set_class_nn.pickle')\n",
+    "val_set = pd.read_pickle('val_set_class_nn.pickle')"
    ]
   },
   {
@@ -294,7 +351,12 @@
    "source": [
     "classes = ['benign','malignant']\n",
     "gts = []\n",
-    "preds = [] \n",
+    "preds_resnet50_noaug_no_normals = [] \n",
+    "preds_resnet50_aug_no_normals = [] \n",
+    "preds_inception_resnet_v2_noaug_no_normals = [] \n",
+    "preds_inception_resnet_v2_aug_no_normals = [] \n",
+    "preds_inception_resnet_v2_noaug_no_normals_clahe_eq = [] \n",
+    "preds_inception_resnet_v2_aug_no_normals_clahe_eq = [] \n",
     "\n",
     "for index, row in val_set.iterrows():\n",
     "    print('loading sequence : {}'.format(row['image_path']))\n",
@@ -302,8 +364,26 @@
     "    img = cv2.resize(img,(128,128))\n",
     "    img = img/255.0\n",
     "    img = np.array([img.reshape(img.shape+(1,))])\n",
-    "    pred = trained_lesion_class_model.predict(img)\n",
-    "    preds.append(classes[np.where(pred[0]==max(pred[0]))[0][0]])\n",
+    "    pred_resnet50_noaug_no_normals = resnet50_noaug_no_normals.predict(img)\n",
+    "#     print(pred_resnet50_noaug_no_normals)\n",
+    "    pred_resnet50_aug_no_normals = resnet50_aug_no_normals.predict(img)\n",
+    "#     print(pred_resnet50_aug_no_normals)\n",
+    "    pred_inception_resnet_v2_noaug_no_normals = inception_resnet_v2_noaug_no_normals.predict(img)\n",
+    "#     print(pred_inception_resnet_v2_noaug_no_normals)\n",
+    "    pred_inception_resnet_v2_aug_no_normals = inception_resnet_v2_aug_no_normals.predict(img)\n",
+    "#     print(pred_inception_resnet_v2_aug_no_normals)\n",
+    "    pred_inception_resnet_v2_noaug_no_normals_clahe_eq = inception_resnet_v2_noaug_no_normals_clahe_eq.predict(img)    \n",
+    "#     print(pred_inception_resnet_v2_noaug_no_normals_clahe_eq)\n",
+    "    pred_inception_resnet_v2_aug_no_normals_clahe_eq = inception_resnet_v2_aug_no_normals_clahe_eq.predict(img)    \n",
+    "#     print(pred_inception_resnet_v2_aug_no_normals_clahe_eq)\n",
+    "\n",
+    "    preds_resnet50_noaug_no_normals.append(classes[np.where(pred_resnet50_noaug_no_normals[0]==max(pred_resnet50_noaug_no_normals[0]))[0][0]])\n",
+    "    preds_resnet50_aug_no_normals.append(classes[np.where(pred_resnet50_aug_no_normals[0]==max(pred_resnet50_aug_no_normals[0]))[0][0]])\n",
+    "    preds_inception_resnet_v2_noaug_no_normals.append(classes[np.where(pred_inception_resnet_v2_noaug_no_normals[0]==max(pred_inception_resnet_v2_noaug_no_normals[0]))[0][0]])\n",
+    "    preds_inception_resnet_v2_aug_no_normals.append(classes[np.where(pred_inception_resnet_v2_aug_no_normals[0]==max(pred_inception_resnet_v2_aug_no_normals[0]))[0][0]])\n",
+    "    preds_inception_resnet_v2_noaug_no_normals_clahe_eq.append(classes[np.where(pred_inception_resnet_v2_noaug_no_normals_clahe_eq[0]==max(pred_inception_resnet_v2_noaug_no_normals_clahe_eq[0]))[0][0]])\n",
+    "    preds_inception_resnet_v2_aug_no_normals_clahe_eq.append(classes[np.where(pred_inception_resnet_v2_aug_no_normals_clahe_eq[0]==max(pred_inception_resnet_v2_aug_no_normals_clahe_eq[0]))[0][0]])\n",
+    "\n",
     "    gts.append(row['lesion_state'])"
    ]
   },
@@ -314,7 +394,12 @@
    "outputs": [],
    "source": [
     "results = pd.DataFrame(columns=['prediction','ground_truth'])\n",
-    "results['prediction'] = preds\n",
+    "results['resnet50 + no aug'] = preds_resnet50_noaug_no_normals\n",
+    "results['resnet50 + aug'] = preds_resnet50_aug_no_normals\n",
+    "results['inception_resnet_v2 + no aug'] = preds_inception_resnet_v2_noaug_no_normals\n",
+    "results['inception_resnet_v2 + aug'] = preds_inception_resnet_v2_aug_no_normals\n",
+    "results['inception_resnet_v2 + clahe + no aug'] = preds_inception_resnet_v2_noaug_no_normals_clahe_eq\n",
+    "results['inception_resnet_v2 + clahe + aug'] = preds_inception_resnet_v2_aug_no_normals_clahe_eq\n",
     "results['ground_truth'] = gts"
    ]
   },
@@ -322,21 +407,116 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#accuracy\n",
+    "preds_resnet50_noaug_no_normals_acc = len(results.loc[results['resnet50 + no aug']==results['ground_truth']])/len(results)\n",
+    "preds_resnet50_aug_no_normals_acc = len(results.loc[results['resnet50 + aug']==results['ground_truth']])/len(results)\n",
+    "preds_inception_resnet_v2_noaug_no_normals_acc = len(results.loc[results['inception_resnet_v2 + no aug']==results['ground_truth']])/len(results)\n",
+    "preds_inception_resnet_v2_aug_no_normals_acc = len(results.loc[results['inception_resnet_v2 + aug']==results['ground_truth']])/len(results)\n",
+    "preds_inception_resnet_v2_noaug_no_normals_clahe_eq_acc = len(results.loc[results['inception_resnet_v2 + clahe + no aug']==results['ground_truth']])/len(results)\n",
+    "preds_inception_resnet_v2_aug_no_normals_clahe_eq_acc = len(results.loc[results['inception_resnet_v2 + clahe + aug']==results['ground_truth']])/len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_output = pd.DataFrame(columns = ['model', 'Accuracy'])\n",
+    "\n",
+    "metrics_output['model'] = ['resnet50 + no aug', 'resnet50 + aug',\n",
+    "                    'inception_resnet_v2 + no aug', 'inception_resnet_v2 + aug',\n",
+    "                   'inception_resnet_v2 + clahe + no aug', 'inception_resnet_v2 + clahe + aug']\n",
+    "\n",
+    "metrics_output['Accuracy'] = [preds_resnet50_noaug_no_normals_acc, preds_resnet50_aug_no_normals_acc,\n",
+    "                       preds_inception_resnet_v2_noaug_no_normals_acc, preds_inception_resnet_v2_aug_no_normals_acc,\n",
+    "                      preds_inception_resnet_v2_noaug_no_normals_clahe_eq_acc, preds_inception_resnet_v2_aug_no_normals_clahe_eq_acc]\n",
+    "\n",
+    "metrics_output = metrics_output.set_index('model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>resnet50 + no aug</th>\n",
+       "      <td>0.776923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>resnet50 + aug</th>\n",
+       "      <td>0.784615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inception_resnet_v2 + no aug</th>\n",
+       "      <td>0.884615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inception_resnet_v2 + aug</th>\n",
+       "      <td>0.892308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inception_resnet_v2 + clahe + no aug</th>\n",
+       "      <td>0.530769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inception_resnet_v2 + clahe + aug</th>\n",
+       "      <td>0.676923</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.8923076923076924"
+       "                                      Accuracy\n",
+       "model                                         \n",
+       "resnet50 + no aug                     0.776923\n",
+       "resnet50 + aug                        0.784615\n",
+       "inception_resnet_v2 + no aug          0.884615\n",
+       "inception_resnet_v2 + aug             0.892308\n",
+       "inception_resnet_v2 + clahe + no aug  0.530769\n",
+       "inception_resnet_v2 + clahe + aug     0.676923"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#accuracy\n",
-    "len(results.loc[results['prediction']==results['ground_truth']])/len(results)"
+    "metrics_output"
    ]
   },
   {
