--- a/trainUnet.ipynb
+++ b/trainUnet.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from unet import *\n",
-    "from res_unet import *\n",
+    "from UNetPlusPlus.segmentation_models import Xnet\n",
     "from data import *\n",
     "import os\n",
     "import h5py\n",
     "from keras.utils import plot_model\n",
     "\n",
     "from keras.backend.tensorflow_backend import set_session\n",
+    "from keras.callbacks import ModelCheckpoint, LearningRateScheduler\n",
     "import tensorflow as tf\n",
     "config = tf.ConfigProto()\n",
     "config.gpu_options.allow_growth = True  # dynamically grow the memory used on the GPU\n",
@@ -30,7 +30,7 @@
    "source": [
     "input_shape = (128,128)\n",
     "# model = unet(batchnorm = False, input_size=input_shape+(1,))\n",
-    "model = res_unet(batchnorm = False, input_size=input_shape+(1,))\n",
+    "model = Xnet(backbone_name='inceptionresnetv2', input_shape=input_shape+(1,), encoder_weights=None, decoder_block_type='transpose')\n",
     "model.summary()"
    ]
   },
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'res_unet_bus_base_w_normals_aug'\n",
+    "model_name = 'xnet_inceptionresnet_bb_histnorm_bus_w_normals_noaug'\n",
     "# plot_model(model, to_file='model_architectures/{}.png'.format(model_name))"
    ]
   },
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aug = 'on'\n",
+    "aug = 'off'\n",
     "\n",
     "imgs_train,imgs_mask_train = train_generator_npy(input_shape, train_image_path, train_mask_path,'','')\n",
     "imgs_val,imgs_mask_val = train_generator_npy(input_shape, val_image_path, val_mask_path,'','')\n",
@@ -137,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "model_dir = 'trained_models'\n",
+    "model_dir = 'models/unet_seg_models'\n",
     "model_checkpoint = ModelCheckpoint(model_dir+'/'+model_name+'.hdf5', monitor='val_loss',verbose=1, save_best_only=True)\n",
     "history = model.fit_generator(tsg, validation_data = vsg, steps_per_epoch=len_training_set/16, validation_steps=len_val_set/16,\n",
     "                    epochs=50,callbacks=[model_checkpoint])"
@@ -164,9 +164,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Environment (conda_tensorflow_p36)",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
